# forecasting_baselines

./: baselines.ipynb  main.py  pyproject.toml
regression_data/: census_business_patterns_2018.csv  census_business_patterns_2019.csv  census_business_patterns_2020.csv  census_business_patterns_2021.csv  census_business_patterns_2022.csv  census_business_patterns_2023.csv  census_business_patterns_yoy.csv  city_pop_pre_2020.csv  city_population.csv  home_values_city.csv  master_city_list.csv  rca.csv  rca_cities.csv  regression_data_final_home_values.csv  regression_data_final_population.csv  regression_data_final_rent.csv  rent_growth.csv  rent_growth_city.csv  zillow_rent_city.csv
